--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -8,9 +8,9 @@
             android:icon="@android:drawable/ic_menu_myplaces"
             android:title="@string/option_a_item" />
         <item
-            android:id="@+id/nav_productos"
+            android:id="@+id/nav_members"
             android:icon="@android:drawable/ic_dialog_map"
-            android:title="@string/option_b_item" />
+            android:title="@string/members_item" />
         <item
             android:id="@+id/nav_carrito"
             android:icon="@android:drawable/ic_menu_view"
