--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="header_left_padding">16dp</dimen>
     <dimen name="header_height">192dp</dimen>
     <dimen name="header_image_size">64dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
