Login, Create and Join group

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="header_height">192dp</dimen>
     <dimen name="header_image_size">64dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="fb_horizontal_padding">20dp</dimen>
+    <dimen name="fb_vertical_padding">10dp</dimen>
 </resources>
