--- a/app/src/main/res/layout/activity_group_entry.xml
+++ b/app/src/main/res/layout/activity_group_entry.xml
@@ -1,43 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".login.LoginActivity">
+    tools:context="com.soccer.whosin.groups.join_group.GroupEntryActivity">
 
-    <RelativeLayout
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:src="@drawable/bg_symbols"
+        android:scaleType="centerCrop"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:gravity="center"
+        android:layout_centerInParent="true"
         android:orientation="vertical">
 
-        <ImageView
+        <EditText
+            android:id="@+id/group.entry.code"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textNoSuggestions"
+            android:hint="@string/group_code" />
+
+        <Button
+            android:id="@+id/group.entry.join"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/primaryColor"
+            android:textColor="@android:color/white"
+            android:text="@string/join_group"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:textAllCaps="false" />
+
+        <TextView
+            android:id="@+id/group.entry.new"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:src="@mipmap/ic_launcher"
-            android:contentDescription="@null"/>
-
-        <com.facebook.login.widget.LoginButton
-            android:id="@+id/login_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/fb_vertical_padding"
-            android:paddingBottom="@dimen/fb_vertical_padding"
-            android:paddingLeft="@dimen/fb_horizontal_padding"
-            android:paddingRight="@dimen/fb_horizontal_padding"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
-
-    </RelativeLayout>
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/primaryColor"
+            android:text="@string/dont_have_code" />
+    </LinearLayout>
 
     <RelativeLayout
-        android:id="@+id/login.loading"
+        android:id="@+id/group.entry.loading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
