--- a/app/src/main/res/layout/activity_group_entry.xml
+++ b/app/src/main/res/layout/activity_group_entry.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/bg_symbols"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
