--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -3,37 +3,30 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/header_height"
-    android:background="@color/colorPrimary"
+    android:background="@color/primaryColor"
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="@dimen/header_left_padding"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <!-- Imagen de perfil -->
-    <ImageView
-        android:id="@+id/circle_image"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/drawer.avatar"
         android:layout_width="@dimen/header_image_size"
         android:layout_height="@dimen/header_image_size"
         android:layout_marginBottom="16dp"
         android:scaleType="centerCrop"
         android:src="@drawable/com_facebook_profile_picture_blank_square"/>
 
-    <!-- Nombre de Usuario -->
     <TextView
-        android:id="@+id/username"
+        android:id="@+id/drawer.user.name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Juana Maria Perez"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textStyle="bold" />
 
-    <!-- Correo de la cuenta -->
     <TextView
-        android:id="@+id/email"
-        style="@style/Widget.AppCompat.Spinner"
+        android:id="@+id/drawer.is.admin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="juanaperez01@gmail.com"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
 </LinearLayout>
