--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,27 +6,40 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".login.LoginActivity">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
+        android:background="@drawable/bg_symbols"
         android:gravity="center"
         android:orientation="vertical">
+        <TextView
 
-        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:src="@mipmap/ic_launcher"
-            android:contentDescription="@null"/>
+            android:textColor="@color/primaryColor"
+            android:textSize="50dp"
+            android:text="@string/app_name"
+            />
+
+
+        <ImageView
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:src="@drawable/image"
+            android:layout_centerHorizontal="true"
+            android:contentDescription="@null" />
+
+
 
         <com.facebook.login.widget.LoginButton
             android:id="@+id/login_button"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="120dp"
             android:paddingTop="@dimen/fb_vertical_padding"
             android:paddingBottom="@dimen/fb_vertical_padding"
             android:paddingLeft="@dimen/fb_horizontal_padding"
@@ -34,21 +47,17 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/login.loading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
-        android:visibility="invisible">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:alpha="0.60"
-            android:background="@android:color/black"
-            android:contentDescription="@null"/>
+        android:visibility="invisible"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <com.wang.avi.AVLoadingIndicatorView
             android:layout_width="wrap_content"
@@ -56,5 +65,17 @@
             android:layout_centerInParent="true"
             app:indicatorName="BallTrianglePathIndicator"
             app:indicatorColor="@android:color/white" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.60"
+            android:background="@android:color/black"
+            android:contentDescription="@null"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/imageView" />
+
     </RelativeLayout>
 </RelativeLayout>
