--- a/app/src/main/res/layout/fragment_fields.xml
+++ b/app/src/main/res/layout/fragment_fields.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.soccer.whosin.fragments.fields.FieldsFragment">
 
-    <fragment
+    <FrameLayout
         android:id="@+id/fields.map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
