--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,24 +16,19 @@
         android:background="@drawable/bg_symbols"
         android:gravity="center"
         android:orientation="vertical">
-        <TextView
 
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/primaryColor"
-            android:textSize="50dp"
-            android:text="@string/app_name"
-            />
-
+            android:textSize="50sp"
+            android:text="@string/app_name" />
 
         <ImageView
             android:layout_width="250dp"
             android:layout_height="250dp"
             android:src="@drawable/image"
-            android:layout_centerHorizontal="true"
             android:contentDescription="@null" />
-
-
 
         <com.facebook.login.widget.LoginButton
             android:id="@+id/login_button"
@@ -43,9 +38,7 @@
             android:paddingTop="@dimen/fb_vertical_padding"
             android:paddingBottom="@dimen/fb_vertical_padding"
             android:paddingLeft="@dimen/fb_horizontal_padding"
-            android:paddingRight="@dimen/fb_horizontal_padding"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
+            android:paddingRight="@dimen/fb_horizontal_padding" />
 
     </LinearLayout>
 
