--- a/app/src/main/res/layout/fragment_member.xml
+++ b/app/src/main/res/layout/fragment_member.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical"
     android:layout_marginLeft="@dimen/text_margin"
-    android:layout_marginRight="@dimen/text_margin"
-    android:orientation="horizontal">
+    android:layout_marginRight="@dimen/text_margin">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/member_avatar"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:contentDescription="@null"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"/>
@@ -20,8 +21,41 @@
         android:id="@+id/member_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/text_margin"
+        android:layout_marginStart="@dimen/text_margin"
+        android:layout_toRightOf="@+id/member_avatar"
+        android:layout_toEndOf="@+id/member_avatar"
+        android:layout_toLeftOf="@+id/member_actions"
+        android:layout_toStartOf="@+id/member_actions"
         android:lines="1"
         android:ellipsize="end"
         android:textAppearance="?attr/textAppearanceListItem" />
-</LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/member_actions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/member_remove"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/list_item_action_padding"
+            android:src="@drawable/ic_remove_member"
+            android:contentDescription="@null" />
+
+        <ImageView
+            android:id="@+id/member_approve"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_approve_member"
+            android:padding="@dimen/list_item_action_padding"
+            android:contentDescription="@null" />
+    </LinearLayout>
+</RelativeLayout>
