--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="text_margin">16dp</dimen>
     <dimen name="fb_horizontal_padding">20dp</dimen>
     <dimen name="fb_vertical_padding">10dp</dimen>
+    <dimen name="list_item_action_padding">6dp</dimen>
 </resources>
