--- a/app/src/main/res/layout/activity_group_entry.xml
+++ b/app/src/main/res/layout/activity_group_entry.xml
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textNoSuggestions"
-            android:text="5Gdwg"
+            android:text="Uz98R"
             android:hint="@string/group_code" />
 
         <Button
