--- a/app/src/main/res/layout/activity_new_match.xml
+++ b/app/src/main/res/layout/activity_new_match.xml
@@ -42,7 +42,7 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_location_on_black_24dp"
+                        android:src="@drawable/ic_action_room"
                         android:contentDescription="@null"/>
 
                     <Spinner
