--- a/app/src/main/res/layout/show_soccer_field_layout.xml
+++ b/app/src/main/res/layout/show_soccer_field_layout.xml
@@ -1,27 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/show.soccer.field.sheet"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    android:background="#FFFFFF"
+    android:background="@android:color/white"
     app:layout_behavior="@string/bottom_sheet_behavior"
     app:behavior_hideable="true"
     app:behavior_peekHeight="0dp" >
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/show.soccer.field.name"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/primaryColor"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:padding="16dp"
-        android:text="BOTTOM SHEET" />
+        android:layout_marginBottom="@dimen/bottom_sheet_vertical_space"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/show.soccer.field.phone"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:padding="16dp"
-        android:text="Texto de prueba" />
+        android:gravity="center_vertical"
+        android:drawablePadding="@dimen/show_match_text_drawable_padding"
+        android:layout_marginBottom="@dimen/text_drawable_space_between"
+        android:drawableStart="@drawable/ic_communication_call"
+        android:drawableLeft="@drawable/ic_communication_call"/>
 
+    <TextView
+        android:id="@+id/show.soccer.field.capacity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:drawablePadding="@dimen/show_match_text_drawable_padding"
+        android:layout_marginBottom="@dimen/text_drawable_space_between"
+        android:drawableStart="@drawable/ic_supervisor_account_black_24dp"
+        android:drawableLeft="@drawable/ic_supervisor_account_black_24dp"/>
+
+    <TextView
+        android:id="@+id/show.soccer.field.price"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:drawablePadding="@dimen/show_match_text_drawable_padding"
+        android:layout_marginBottom="@dimen/text_drawable_space_between"
+        android:drawableStart="@drawable/ic_attach_money_black_24dp"
+        android:drawableLeft="@drawable/ic_attach_money_black_24dp"/>
 </LinearLayout>
