--- a/app/src/main/res/layout/match_participant.xml
+++ b/app/src/main/res/layout/match_participant.xml
@@ -2,11 +2,10 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:padding="2dp">
+    android:layout_width="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/image"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
+        android:id="@+id/match.participant.image"
+        android:layout_width="48dp"
+        android:layout_height="48dp" />
 </LinearLayout>
