--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="accentColor">#00838F</color>
     <color name="window_background">#FFFFFF</color>
     <color name="radio_color">#00838F</color>
+
+    <color name="light_gray">#f2f4f7</color>
 </resources>
