--- a/app/src/main/res/layout/activity_new_match.xml
+++ b/app/src/main/res/layout/activity_new_match.xml
@@ -58,6 +58,10 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:baselineAligned="false"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:paddingTop="@dimen/activity_vertical_margin"
                     android:visibility="gone">
                     
                     <LinearLayout
