--- a/app/src/main/res/layout/fragment_matches.xml
+++ b/app/src/main/res/layout/fragment_matches.xml
@@ -11,6 +11,8 @@
         android:id="@+id/matches_list"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         app:layoutManager="LinearLayoutManager" />
 
     <RelativeLayout
