--- a/app/src/main/res/layout/match_list_item.xml
+++ b/app/src/main/res/layout/match_list_item.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="10dp"
     android:paddingBottom="10dp">
 
@@ -16,7 +13,7 @@
         android:src="@mipmap/ic_launcher"
         android:contentDescription="@null"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"/>
+        android:layout_alignParentLeft="true" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,7 +30,7 @@
             android:id="@+id/match.soccer.field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/cardview_dark_background"
+            android:textColor="@color/primaryColor"
             style="@style/TextAppearance.AppCompat.Medium"
             android:lines="1"
             android:ellipsize="end" />
@@ -60,23 +57,23 @@
     <RelativeLayout
         android:id="@+id/match.icons.wrapper"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
-
-        <TextView
-            android:id="@+id/match.confirmations"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"/>
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true">
 
         <ImageView
             android:id="@+id/match.confirmation.status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
             android:contentDescription="@null"/>
-    </RelativeLayout>
 
+        <TextView
+            android:id="@+id/match.confirmations"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/match.confirmation.status"/>
+    </RelativeLayout>
 </RelativeLayout>
